fix Primer menu capitalization and spacing

--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -334,7 +334,7 @@ button, .btn {
   font-weight: 700;
 }
 
-.h-font {
+.lowercase {
   text-transform: lowercase;
 }
 
